# afm1

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: raf.cpp  suio.c  suio.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml  roundlabel.xml  roundlabel_dark.xml  roundlabel_light.xml
app/src/main/res/layout/: activity_fullscreen.xml  activity_fullscreen_toolbar.xml  activity_hex.xml  app_bar_main.xml  file_item.xml  fragment_hex.xml  fragment_main.xml  fragment_media.xml  fragment_media_error.xml  fragment_media_files.xml  fragment_media_image.xml  fragment_media_text.xml  hex_dialog.xml  hex_item.xml  media_item.xml  media_text.xml  nav_header_main.xml  paste.xml  paste_conflict.xml  paste_error.xml  properties.xml
app/src/main/res/menu/: activity_main_drawer.xml  menu_add.xml  menu_file.xml  menu_main.xml  menu_select.xml  menu_select_toolbar.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/raw/: about.html
app/src/main/res/raw-de/: about.html
app/src/main/res/raw-es/: about.html
app/src/main/res/raw-fr/: about.html  about.xml
app/src/main/res/raw-in/: about.html
app/src/main/res/raw-it/: about.html
app/src/main/res/raw-ja/: about.html
app/src/main/res/raw-pt-rBR/: about.html
app/src/main/res/raw-tr/: about.html
app/src/main/res/raw-zh-rCN/: about.html
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
(+45 files in other folders)
